--- a/Documentation-Manuals/open_world_manual.html
+++ b/Documentation-Manuals/open_world_manual.html
@@ -16,7 +16,7 @@
 </ul>
 </li>
 <h3><li>Prepare your presets</h3>
-<p>A preset is a dictionary which consists of at least a "TYPE" and a "RES" entry. The type must be either wall, unit, or item. Res stands for resource, and must be the path to the scene of this preset.</p>
+<p>A preset is a dictionary which consists of at least a "CON" and a "RES" entry. Con stands for container, and must be either walls, units, or items. Res stands for resource, and must be the path to the scene of this preset.</p>
 <p>Variables that are written in upper case will be considered as constant, so they won't be copied over dictionary of an instance. Variables that are written in lower case will be copied over, so they can vary between individual instances of this preset. Transform of the instance and name of this preset will be automatically made into variables on the instance, so you don't need to create them.</p>
 </li>
 </li>
